--- a/estilito.css
+++ b/estilito.css
@@ -1,17 +1,3 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-header{
-    width: 100%;
-    height: 50px;
-    
-    position: fixed;
-}
-
-body { min-height: 100vh; }
-
 html {
     background: linear-gradient(rgba(255,255,255,.5), rgba(255,255,255,.5)), url("https://images7.alphacoders.com/317/thumb-1920-317196.jpg") no-repeat center center fixed;
     -webkit-background-size: cover;
@@ -83,25 +69,31 @@ table {
     margin: auto;     
     width: 480px; 
     text-align: left;    
-    border-collapse: collapse; }
+    border-collapse: collapse;
+    background-image: linear-gradient(45deg, #0cf2182d, rgba(235, 192, 35, 0.668)); 
+}
 
 th {     
-    font-size: 13px;     
+    font-size: 25px;     
     font-weight: normal;     
-    padding: 8px;     
+    padding: 8px;   
+    
     background: #b9c9fe;
     border-top: 4px solid #aabcfe;    
-    border-bottom: 1px solid #fff; color: #039; }
+    border-bottom: 1px solid #fff; color: rgb(113, 153, 233); 
+}
 
 td {    
     padding: 8px;     
     background: #e8edff;     
     border-bottom: 1px solid #fff;
     color: #669;    
-    border-top: 1px solid transparent; }
+    border-top: 1px solid transparent; 
+    background-image: linear-gradient(45deg, #0cf2182d, rgba(235, 192, 35, 0.668)); 
+}
 
 tr:hover td { 
-    background: #d0dafd; color: #339; 
+    background: #05530fb6; color: rgb(142, 142, 235); 
 }
 
 .form-reserva{
@@ -153,4 +145,27 @@ tr:hover td {
     display: flex;
     flex-flow: row;
     align-items: center;
+}
+
+html {height: 100%;}
+#degradao {background-image: linear-gradient(45deg, #0cf2182d, rgba(235, 192, 35, 0.668));}
+
+h5, #pecita {
+    font-family: sans-serif !important;
+    color: #dfe4ec !important;
+}
+h1{
+    font-size: 20px;
+    font-family: 'Times New Roman', Times, serif;
+    color: #2c0900 !important;
+}
+#lista{
+    font-size: 30px;
+    font-family: sans-serif !important;
+    color: #000000;
+}
+#cont_lista{
+    font-size: 30px;
+    font-family: sans-serif !important;
+    color: #000000;
 }
